[package]
name = "runi"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1"
eframe = "0.24.1"
egui = "0.24.1"
env_logger = "0.10.1"
freedesktop_entry_parser = "1.3"
log = "0.4.20"
shell-words = "1"
strsim = "0.10.0"
walkdir = "2.4"
