[package]
name = "runi"
version = "0.1.0"
edition = "2024"

#[profile.release]
#codegen-units = 1
#opt-level = 3
#lto = "fat"

[dependencies]
anyhow = "1"
eframe = "0.27"
egui = "0.27"
env_logger = "0.10"
freedesktop_entry_parser = "1.3"
log = "0.4"
nix = { version = "0.29.0", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
strsim = "0.11"
toml = "0.8.12"
walkdir = "2.4"
