[package]
name = "runi"
version = "2026.7.5"
edition = "2024"
rust-version = "1.92"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1"
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = ["glow", "x11", "wayland"] }
env_logger = "0.10"
freedesktop_entry_parser = "1.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
smithay-client-toolkit = "0.20"
strsim = "0.11"
toml = "0.8.12"
walkdir = "2.4"
wayland-client = "0.31"
wlr-capture = { version = "=1.3.0", default-features = false, features = ["toolkit"] }
